--- a/docs/hotspot-makers/compliance-commitee.mdx
+++ b/docs/hotspot-makers/compliance-commitee.mdx
@@ -13,8 +13,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 ## Charter
 
 - Quick Guide
-  - The MCC was formed to set basic standards and verify compliance of the Hotspots being added to
-    the Helium Network through
+  - The Manufacturing Compliance Committee ("MCC") was formed to set basic standards and verify
+    compliance of the Hotspots being added to the Helium Network through
     [HIP-19: Approval Process For Third-Party Manufacturers](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers.md).
   - The MCC reviews and votes to approve HIP-19 proposals.
   - The purpose of the MCC is to ensure the security and integrity of the blockchain.
@@ -122,8 +122,8 @@ that members cycle yearly.
     notes are taken, both are publicly available to the community.
     - Meeting are scheduled for 12pm ET on the 3rd Wednesday of each month. (This is subject to
       change due to holidays, emergencies, etc)
-      - **Tentative 2023 Schedule:** _May 17, June 21,
-        July 19, August 16, September 20, October 18, November 15, & December 20_
+      - **Tentative 2023 Schedule:** _May 17, June 21, July 19, August 16, September 20, October 18,
+        November 15, & December 20_
     - [Recorded videos](https://www.youtube.com/@heliumfoundation)
     - [MCC Monthly Call Notes](https://docs.google.com/document/d/1CtJK8Podx8hdWNJ8HCRImBfSwJVt1jZ10Eabeh2s-yA/edit?usp=sharing)
     - Announcements will be published on the
