--- a/docs/hotspot-makers/maker-ethics.mdx
+++ b/docs/hotspot-makers/maker-ethics.mdx
@@ -141,7 +141,7 @@ Manufacturers are responsible for the integrity of the network and should take c
 genuine resellers and partners. Manufacturers will be held accountable for the integrity of their
 distributor/ reseller network.
 
-### 11. The MCC considered Dual-Mining to be a gateway/Hotspot that mines both Helium tokens and another application.
+### 11. The MCC considers Dual-Mining to be a gateway/Hotspot that mines both Helium tokens and another application.
 
 1. Dual-Mining is only permitted so long as it does not conflict with a DeWi Network.
    1. A DeWi network is any decentralized wireless network running on a blockchain and issuing
