Decaying vs Cliff

--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -103,10 +103,10 @@ receive veHNT in proportion with the amount of time that the tokens are staked f
 
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/lockup.png')} />
-  <figcaption>Selecting your lockup type, Cliff or Constant.</figcaption>
+  <figcaption>Selecting your lockup type, Decaying or Constant.</figcaption>
 </figure>
 
-#### Cliff
+#### Decaying
 
 Tokens are locked for a fixed duration and are released in full at the end of the defined lockup
 period. Vote weight declines linearly until release. This is effectively starting the cooldown at
