--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -253,8 +253,7 @@ after the split is complete.
 
 Extending a stake will lengthen the time it will take to unstake. Position holders may extend a
 stake to gain a larger multiplier for voting power or delegation purposes. Extending a staking
-period does not add additional time to the stake, instead updating the existing stake. For example,
-a 2-year stake extended to 4 years results in a 4-year stake, not a 6-year stake.
+period does not add additional time to the stake, it instead updates the existing stake period to the new selection.
 
 ### Unlocking a Stake (Cooldown)
 
