changes from feedback

--- a/docs/wallets/app-wallet/transfer-hotspot.mdx
+++ b/docs/wallets/app-wallet/transfer-hotspot.mdx
@@ -16,15 +16,15 @@ As requested by the Community via HIP13, the Transfer Hotspot feature is availab
 owners of the Network to transfer their Hotspots to another owner.
 
 This feature enables Hotspot owners to transfer ownership of a Hotspot to another user. Once
-transferred, the new owner will receive all future Hotspot mining rewards. 
+transferred, the new owner will receive all future Hotspot mining rewards.
 
 :::info
 
-It is now recommended to use version 2.0.0 or higher of the [Helium Wallet app](/wallets/helium-wallet-app) to perform hotspot 
-transfers between wallets. This app has no restrictions on the transfer
+It is now recommended to use version 2.0.0 or higher of the
+[Helium Wallet app](/wallets/helium-wallet-app) to perform hotspot transfers between wallets. This
+app has no restrictions on the transfer
 
 :::
-
 
 ### Requirements
 
@@ -96,14 +96,9 @@ No. Once transferred, the Hotspot and its mining rewards moving forward belong t
 
 The Seller pays for the transaction fee.
 
-
 ### Will this be recorded in the blockchain?
 
 Yes. Transfer Hotspot transactions are on-chain and visible in Explorer.
-
-### What if the activity check reveals the Hotspot hasn’t done anything recently?
-
-You won’t be able to transfer the Hotspot. Use the Wallet app to do this.
 
 ### How do I make sure the Hotspot physically changes hands?
 
