--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -22,8 +22,8 @@ Existing HNT and MOBILE tokens in your wallets will remain unchanged by this mig
 
 ## Migration Utility
 
-You can migrate you wallet using the widget below by entering your Helium or Solana wallet address
-and clicking the "Seed Wallet" buttton.
+You can migrate a wallet using the widget below by entering a Helium or Solana wallet address and
+clicking the "Seed Wallet" buttton.
 
 import { MigrateWallet } from '@theme/MigrateWallet'
 
