--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -20,6 +20,24 @@ accounts to a maxium of 10 on the Helium Wallet app.
 
 Existing HNT and MOBILE tokens in your wallets will remain unchanged by this migration.
 
+## Migration Utility
+
+You can migrate a wallet using the widget below by entering a Helium or Solana wallet address and
+clicking the "Seed Wallet" buttton.
+
+import { MigrateWallet } from '@theme/MigrateWallet'
+
+<MigrateWallet />
+
+## Migration Utility
+
+You can migrate you wallet using the widget below by entering your Helium or Solana wallet address
+and clicking the "Seed Wallet" buttton.
+
+import { MigrateWallet } from '@theme/MigrateWallet'
+
+<MigrateWallet />
+
 ## For Helium App Users
 
 :::caution
