Add 'Sign In' explainer to Realms Staking guide

--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -77,8 +77,20 @@ The Helium Wallet App's browser can be accessed via the globe icon in the bottom
 </figure>
 <br />
 
+### Signing Into Realms
+
+Connect your account to Realms using the in-app browser from the Helium Wallet App.
+
+<figure className="screensnippet-wrapper">
+  <img src={useBaseUrl('/img/realms/connectaccount.png')} />
+  <figcaption>
+    This user is logged in with their <code>4qPt5...</code> account.
+  </figcaption>
+</figure>
+<br />
+
 Once your wallet has been connected to Realms, your token balances (or existing positions) will be
-displayed in the governance section of the Helium DAO.
+displayed in the governance section of the DAO.
 
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/availabletokens.png')} />
