key terms to list for formatting

--- a/docs/community-governance/community-voting.mdx
+++ b/docs/community-governance/community-voting.mdx
@@ -16,14 +16,16 @@ voting is currently facilited through a Realms organization.
 
 ## Key Terms
 
-**Vote Escrowed (ve):** A position created by staking your tokens which enables DAO or subDAO
-voting.  
-**Voting Power:** Vote Escrowed grant their holder voting power. One veToken is equivalent to one
-vote on matters of community governance.  
-**Realms:** A Solana-native tool for staking, delegation, DAO, and treasury management.  
-**veHNT:** A position created by staking your HNT.  
-**veIOT:** A position created by staking your IOT. Used for IOT Network governance.  
-**veMOBILE:** A position created by staking your MOBILE. Used for MOBILE Network governance.
+- **Vote Escrowed (ve):** A position created by staking your tokens which enables DAO or subDAO
+  voting.
+- **Voting Power:** Vote Escrowed grant their holder voting power. One veToken is equivalent to one
+  vote on matters of community governance.
+- **Realms:** A Solana-native tool for staking, delegation, DAO, and treasury management.
+- **veHNT:** A position created by staking your HNT.
+- **veIOT:** A position created by staking your IOT. Used for IOT Network governance.
+- **veMOBILE:** A position created by staking your MOBILE. Used for MOBILE Network governance.
+
+---
 
 ## veTokens and Voting
 
