embed video walk through and fixup admonition

--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -19,13 +19,31 @@ April 19, 2023.
 
 You can migrate your tokens any time after April 19, 2023. There is no need to rush to migrate your
 tokens unless you want to lock up HNT early to receive the
-[3X veHNT landrush bonus.](/vote-escrow/voting-power/#is-there-a-staking-genesis-period) :::
-
-:::tip Video Walkthrough
-
-There is a [video walkthrough of the full process here](https://youtu.be/Sl7UBStRmpA).
+[3X veHNT landrush bonus.](/vote-escrow/voting-power/#is-there-a-staking-genesis-period)
 
 :::
+
+---
+
+## Video Walkthrough
+
+<figure className="screensnippet-wrapper">
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/Sl7UBStRmpA"
+    title="YouTube video player"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen
+  ></iframe>
+  <figcaption>
+    Video of the process in action.{' '}
+    <a href="https://www.youtube.com/watch?v=Sl7UBStRmpA">Click here to watch on YouTube</a>.
+  </figcaption>
+</figure>
+
+---
 
 ## Installing the Helium-Solana App
 
