--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -29,6 +29,7 @@ tokens unless you want to lock up HNT early to receive the
 
 <figure className="screensnippet-wrapper">
   <iframe
+    style={{ margin: '10px', borderRadius: '14px' }}
     width="560"
     height="315"
     src="https://www.youtube.com/embed/Sl7UBStRmpA"
