--- a/docs/wallets/helium-wallet-app.mdx
+++ b/docs/wallets/helium-wallet-app.mdx
@@ -99,6 +99,18 @@ There is a limit of 10 wallet accounts (testnet + mainnet combined) per install.
 
 :::
 
+## Tokens Supported
+
+The Helium wallet will display the quantity in your wallet and price for:
+
+  HNT - in USD or your defined currency
+  MOBILE - in USD or your defined currency
+  IOT- in USD or your defined currency
+  DC- in USD (Not transferable)
+  SOL- in USD or your defined currency
+
+No other tokens held in your wallet will be displayed, the value of other tokens will not be shown.
+
 ## Send And Request Tokens
 
 <img
