--- a/docs/vote-escrow/realms.mdx
+++ b/docs/vote-escrow/realms.mdx
@@ -18,8 +18,8 @@ managed within Realms at any time.
 
 ## Landrush
 
-For the first 10 days following the Solana migration, HNT holders are elegible to stake their HNT
-for a 'landrush' bonus of 3x the lock amount.<sup>(</sup>[^1]<sup>,</sup>[^2]<sup>)</sup>
+For the first 10 days following the Solana migration, HNT holders are eligible to stake their HNT
+for a 'landrush' bonus of 3x the locked amount.<sup>(</sup>[^1]<sup>,</sup>[^2]<sup>)</sup>
 
 If a landrush stake is moved or split out of its original position after the first 10 days have
 lapsed, the landrush bonus is forfeited.
@@ -64,7 +64,7 @@ Anyone with HNT in a wallet can create a stake using Realms either using an in-w
 browser-connected wallet.
 
 This guide outlines using Realms with the [Helium Wallet App](/wallets/helium-wallet-app). To use
-Realms on a desktop browser, a Solana-compatabile browser wallet can be used (such as Phantom or
+Realms on a desktop browser, a Solana-compatible browser wallet can be used (such as Phantom or
 Backpack).
 
 The Helium Wallet App's browser can be accessed via the globe icon in the bottom navigation.
@@ -110,8 +110,8 @@ As long as HNT is available in your linked account, new stakes can be created by
 ### Lockup Period
 
 In order to build a secure voting system, Helium only allows votes from token holders willing to
-align themselves with the longterm health of the Helium Network. This is done by allowing holders to
-receive veHNT in proportion with the amount of time that the tokens are staked for.
+align themselves with the long-term health of the Helium Network. This is done by allowing holders to
+receive veHNT in proportion to the amount of time that the tokens are staked for.
 
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/lockup.png')} />
@@ -157,7 +157,7 @@ then it declines linearly until release.
 
 ### Duration
 
-The duration of your cooldown is defined in days. The longer your tokens are staked, the more veHNT
+The duration of your cooldown is defined as days. The longer your tokens are staked, the more veHNT
 will be issued. If you chose the 'Constant' lockup period, this duration takes effect after the
 'Unlock' action is executed.
 
@@ -220,7 +220,7 @@ earns voting rights, but no token return. You can delegate an active stake withi
 interface.
 
 Once a stake has been delegated, it can be undelegated in the same interface. Delegations can be
-changed at any time, however it will take one epoch for the position to be available for
+changed at any time, however, it will take one epoch for the position to be available for
 redelegation. The stake must be delegated for the entire epoch to receive rewards for that epoch.
 
 <figure className="screensnippet-wrapper">
@@ -235,26 +235,26 @@ veHNT position to multiple networks (IOT or MOBILE) or set different lockup time
 positions.
 
 Be warned, splitting a [landrush](#landrush) position after the initial 10 day period will result in
-losing the multiplier for the tokens being split or transfered off the position.
+losing the multiplier for the tokens being split or transferred off the position.
 
-You must undelegate before spliting a stake. You can redelegate after the split is complete.
+You must undelegate before splitting a stake. You can redelegate after the split is complete.
 
 ### Transfer a Stake
 
-Neither staked tokens nor the NFT representing a stake can be transfered from one wallet to another.
+Neither staked tokens nor the NFT representing a stake can be transferred from one wallet to another.
 Stakes can only be transferred from one position to another within the same wallet. Positions can
 only transfer to positions of greater or equal duration. This functionality is useful for
-consolidating positions. Landrush positions cannot have more locked tokens transfered into them
+consolidating positions. Landrush positions cannot have more locked tokens transferred into them
 after the landrush period. Any veHNT transferred out of a landrush position will lose the 3x
 multiplier bonus.
 
-You must undelegate both positions before transfering a stake between postions. Transfering to a new
+You must undelegate both positions before transferring a stake between positions. Transferring to a new
 position requires the original position to be undelegated. You can redelegate one or both positions
 after the split is complete.
 
 <figure className="screensnippet-wrapper">
   <img src={useBaseUrl('/img/realms/transfer.png')} style={{ maxHeight: 300 }} />
-  <figcaption>A position can be transfered in full or in part.</figcaption>
+  <figcaption>A position can be transferred in full or in part.</figcaption>
 </figure>
 
 ### Extending a Stake
@@ -267,7 +267,7 @@ the new selection.
 ### Unlocking a Stake (Cooldown)
 
 If a stake was created with a 'constant' [lockup period](#lockup-period), the ability to 'Unlock'
-the position will be visible in the postion as long as the unlock has not yet been initiated. A
+the position will be visible in the position as long as the unlock has not yet been initiated. A
 constant lockup position will first need to be unlocked before the cooldown period begins.
 
 Unlocking the position will begin the unlocking process. The time this takes will depend on the
