--- a/docs/vote-escrow/vehnt.mdx
+++ b/docs/vote-escrow/vehnt.mdx
@@ -40,7 +40,7 @@ The Helium Network serves as the overarching system that enables a multitude of 
 to exist via the novel incentive mechanism of HNT.
 
 Each subDAO governs a specific area of the network and receives a portion of the network's token
-emissions, distributed proportionaly among veHNT holders who have delegated their veHNT to that
+emissions, distributed proportionately among veHNT holders who have delegated their veHNT to that
 subDAO. The distribution of tokens is determined by the amount of veHNT delegated to each subDAO and
 the individual lock-up periods. Initially, two subDAOs are introduced: IOT and MOBILE. Voting on the
 IOT and MOBILE networks will require veIOT and veMOBILE respectively.
@@ -75,7 +75,7 @@ veTokens can be managed through [Realms](/vote-escrow/realms) using the in-app b
 
 SubDAO rewards are calculated and paid to the lock-up position each 24hr reward period. At
 approximately 00:30 UTC time. Currently, the IOT and MOBILE subDAO each have a 6% token emission
-pool for veHNT stakers. This 6% is shared proportionaly amongst all veHNT delegated to that subDAO
+pool for veHNT stakers. This 6% is shared proportionately amongst all veHNT delegated to that subDAO
 at the end of each epoch.
 
 **subDAO rewards may increase when:**
